server/app/assets/stylesheets/categories.scss
@import './shared/text.scss';
@import "./required_importants";

.modal-dialog {
  &.category--modal-dialog {
    width: 518px;
    height: 515px;
  }
}

.import-category--modal-dialog {
  width: 500px;
  height: 430px;
  padding: 1.5rem 40px 2rem;
}

.modal-content {
  &.category--modal-content {
    height: 100%;
  }
}

.modal-body {
  &.category--modal-body {
    height: calc(100% - 80px - 90px);
  }
}

.category--marker {
  width: 10px;
  height: 10px;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin-right: 8px;
  border: solid 1px white;

  &.category--marker-list {
    margin-top: 5px;
  }

  &.category--marker-level0 {
    position: absolute;
    left: 0;
    z-index: 0;
  }

  &.category--marker-level1 {
    position: absolute;
    left: 6px;
    z-index: 1;
  }

  &.category--marker-level2 {
    position: absolute;
    left: 12px;
    z-index: 2;
  }

  &.category--marker-selected {
    outline: solid 2px rgba(75, 123, 229, 0.5);
    outline-offset: 2px;
  }

  &.category--marker-hoverable:hover {
    outline: solid 2px rgba(75, 123, 229, 0.5);
    outline-offset: 2px;
    cursor: pointer;
  }
}

.category--marker-big {
  width: 18px;
  height: 18px;
  border-radius: 50%;

  &.category--marker-selected {
    outline: solid 2px rgba(75, 123, 229, 0.5);
    outline-offset: 2px;
  }

  &.category--marker-hoverable:hover {
    outline: solid 2px rgba(75, 123, 229, 0.5);
    outline-offset: 2px;
    cursor: pointer;
  }
}

.category--multi-dot-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 16px;
  margin-right: 8px;
  position: relative;
}

.category--tooltip {
  width: max-content;
  max-width: 150px;
  position: absolute;
  padding: 8px 13px;
  background-color: white;
  display: flex;
  left: 120px;
  border: solid 1px rgba(188, 187, 199, 0.2);
  border-radius: 6px;
  box-shadow: 0 4px 20px -2px rgba(160, 159, 183, 0.4);
  backdrop-filter: blur(10px);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  z-index: 1000;

  &.invisible {
    display: none;
  }

  .category--tooltip-point {
    width: 10px;
    height: 10px;
    position: absolute;
    left: -5px;
    top: 50%;
    margin-top: -5px;
    rotate: 45deg;
    background-color: white;
  }

  .category--tooltip-name {
    max-width: 100px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
}

.category--table-cell-container {
  width: max-content;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.category--list-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  width: calc(100% - 24px);
  height: 230px;
  overflow-x: hidden;
  overflow-y: auto;
  margin: 24px auto 0;
}

.category--turbo-frame {
  width: 100%;
}

.category--list-item {
  width: 100%;
  height: 40px;
  border: solid 1px #e3e3e8;
  border-radius: 6px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 10px 16px;

  margin-bottom: 12px;
  background-color: rgba(246, 247, 250, 0.25);
}

.category--list-item-left-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
}

.category--list-item-text-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.category--list-item-title {
  font-size: 14px;
  letter-spacing: 0;
  color: #3f3c70;
  margin: 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  @extend .fw-semi-bold;
}

.category--list-item-subtitle {
  font-size: 14px;
  line-height: 21px;
  color: #6d6a94;
  font-weight: 400;
  margin: 0;
}

.category--options-menu {
  width: 132px;
  height: 72px;
  padding: 4px;
}

.category--options-menu-item {
  width: 100%;
  height: 34px;
  border-radius: 6px;
  background-color: white;
  padding-left: 12px;
  padding-top: 8px;
  font-size: 14px;
  color: #110e4c;
  letter-spacing: 0;
  font-weight: 500;
  cursor: pointer;

  &:hover {
    background-color: #f6f7fa;
    color: #110e4c;
  }
}

.category--more-options-icon-container {
  width: 32px;
  height: 32px;
  border-radius: 8px;
  background-color: white;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 8px 0 4px;

  &:hover {
    background-color: #f6f7fa;
  }
}

.category--edit-pencil-container {
  width: 32px;
  height: 32px;
  border-radius: 8px;
  background-color: white;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;

  &:hover {
    background-color: #f6f7fa;
  }
}

#category--edit-pencil-icon {
  width: 16px;
  height: 16px;
}

.category--delete-modal-title {
  font-size: 17px;
  color: #110e4c;
  font-weight: 600;
  margin: 0 auto 9px;
}

.category--delete-modal-subtitle {
  font-size: 14px;
  color: #6d6a94;
  line-height: 21px;
  margin: 0 auto 4px;
}

.category--list-item-edit {
  width: 100%;
  height: 40px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 16px;
}

@media (max-width: 500px) {
  .category--list-item-edit {
    height: 96px;
    flex-direction: column;
    justify-content: space-between;
    gap: 8px;

  }
}

.category--list-item-text-container-edit {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  border: solid 1px;
  border-radius: 6px;
  margin-right: 15px;
  border: solid 2px #4b7be5;
  position: relative;
}

@media (max-width: 500px) {
  .category--list-item-text-container-edit {
    margin-right: 0;
  }
}

.category--list-item-input {
  width: calc(100% - 50px);
  outline: none;
  border: none;
  padding-left: 16px;
  font-size: 15px;
  color: #110e4c;
  line-height: 20px;
  margin-right: auto;
}
/* ... */

